# gedlib

./: .gitignore  CMakeLists.txt  NOTES.md  ide.sh  install.py
ext/lsape.5/include/: lsap.h  lsape.h
ext/lsape.5/include/dev/: greedy-lsape.h  hungarian-lsap.h
median/src/: median_graph_estimator.ipp
median/tests/: bst_query_letter.cpp  time_limit_tests.cpp
src/edit_costs/: cmu.hpp
src/env/: common_types.hpp  ged_env.hpp  ged_env.ipp  ged_graph.hpp  ged_graph.ipp  matrix.hpp  matrix.ipp  node_map.hpp  node_map.ipp  progress_bar.hpp  progress_bar.ipp  result.hpp  result.ipp  timer.hpp  timer.ipp
src/methods/: all_methods.hpp  branch_uniform.hpp  branch_uniform.ipp  decision_tree.hpp  decision_tree_j48.hpp  decision_tree_rep.hpp  hed.ipp  ipfp.hpp  ipfp.ipp  ls_based_method.hpp  ls_based_method.ipp  refine.ipp  star.hpp  star.ipp
src/util/: lsape_solver.ipp  misc.ipp
tests/ijprai2020/src/: test_on_s_acyclic.sh
tests/kazu/: CMakeLists.txt  notes.md
tests/kazu/collections/: AIDS1-10.xml  AIDS11-20.xml  AIDS21-30.xml  AIDS31-40.xml  AIDS41-50.xml  AIDS51-60.xml  AIDS61-70.xml  AIDS71-80.xml  AIDS_test.xml  AIDS_train.xml  GREC_test.xml  Letter_test.xml  Letter_train.xml  Mutagenicity1-10.xml  Mutagenicity11-20.xml  Mutagenicity21-30.xml  Mutagenicity31-40.xml  Mutagenicity41-50.xml  Mutagenicity51-60.xml  Mutagenicity61-70.xml  Mutagenicity71-80.xml  Mutagenicity81-90.xml  Mutagenicity91-100.xml  Mutagenicity_train.xml  Protein1-10.xml  Protein11-20.xml  Protein21-30.xml  Protein31-40.xml  Protein41-50.xml  Protein51-60.xml  Protein61-70.xml
tests/kazu/collections/orig/: AIDS41-50.xml  AIDS51-60.xml  AIDS61-70.xml  Mutagenicity81-90.xml  Mutagenicity91-100.xml  Protein31-40.xml  Protein51-60.xml
tests/kazu/src/: graph_gen.hpp  graph_statistics.hpp  main.cpp  make_sized_datasets.cpp  method.hpp  util.hpp
tests/kazu/src/tests/: ls.hpp  ls_all.hpp  ls_rand.hpp  ls_sizes.hpp  lsape.hpp  statistics.hpp
tests/unit_tests/collections/: AIDS_2.xml  cmu_5.xml  mao_5.xml  mao_small.xml
tests/unit_tests/src/: catch.hpp  ged_env_test.cpp  lsap_solver_test.cpp
tests/vldbj2020/: CMakeLists.txt
tests/vldbj2020/collections/: AIDS1-10.xml  AIDS11-20.xml  AIDS21-30.xml  AIDS31-40.xml  AIDS71-80.xml  Fingerprint_test.xml  Fingerprint_train.xml  GREC_train.xml  Mutagenicity11-20.xml  Mutagenicity31-40.xml  Mutagenicity41-50.xml  Mutagenicity51-60.xml  Mutagenicity61-70.xml  Mutagenicity71-80.xml  Mutagenicity_test.xml  Protein1-10.xml  Protein11-20.xml  Protein21-30.xml  Protein41-50.xml  Protein_test.xml  Protein_train.xml
tests/vldbj2020/src/: test_best_methods.cpp  test_lp_based_methods.cpp  test_ls_based_methods.cpp  test_lsape_based_methods.cpp  test_misc_methods.cpp  train_ml.cpp  train_ring.cpp  train_subgraph.cpp  train_walks.cpp
